# nextgenio-llm-modell_critical_thinking

./: README.md  pixi.toml  pyproject.toml  requirements.txt
.github/: README.md
appendix/: README.md
appendix-A/01_main-chapter-code/: README.md
appendix-D/01_main-chapter-code/: README.md
appendix-E/01_main-chapter-code/: README.md
bonus/: README.md
ch01/: README.md
ch02/01_main-chapter-code/: README.md
ch03/01_main-chapter-code/: README.md
ch04/01_main-chapter-code/: README.md
ch05/01_main-chapter-code/: README.md
ch06/01_main-chapter-code/: README.md
ch07/01_main-chapter-code/: README.md
chapters/ch01/: README.md
chapters/ch02/: README.md
docs/architecture/: README.md
docs/forskning/: README.md
docs/kravspesifikasjon/: README.md
docs/use_cases/: README.md
kv_cache/: README.md
pkg/llms_from_scratch/: README.md
pkg/nextgen_llm/: README.md
setup/: README.md
tests/: README.md
