[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "nextgenio-llm-kritisktenkning"
version = "0.1.0"
description = "Bygg en selvlærende LLM med kritisk tenkning – del av NextGenio"
readme = "README.md"
requires-python = ">=3.10"
authors = [
    {name = "Henrik Strand", email = "steliaverditakst@gmail.com"}
]
license = {file = "LICENSE.txt"}
dependencies = [
    "torch>=2.3.0",
    "jupyterlab>=4.0",
    "tiktoken>=0.5.1",
    "matplotlib>=3.7.1",
    "tensorflow>=2.18.0",
    "tqdm>=4.66.1",
    "numpy>=1.26,<2.1",
    "pandas>=2.2.1",
    "pip>=25.0.1",
    "pytest>=8.3.5"
]

[tool.setuptools]
package-dir = {"" = "pkg"}

[tool.setuptools.packages.find]
where = ["pkg"]

[tool.uv.sources]
nextgenio-llm-kritisktenkning = { workspace = true }

[dependency-groups.dev]
dependencies = [
    "build>=1.2.2.post1",
    "twine>=6.1.0",
    "tokenizers>=0.21.1"
]

[tool.ruff]
line-length = 140

[tool.ruff.lint]
exclude = [".venv"]
ignore = [
    "C406", "E226", "E402", "E702", "E703",
    "E722", "E731", "E741"
]

